--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
+    "dayjs": "^1.10.7",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
     "react-router-dom": "^6.0.0",
