--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
